testing more POST item in documentation
