# docs/swagger.yaml
@@ -57,6 +57,27 @@ definitions:
       unread:
         type: integer
     type: object
+  entity.Groupchatitem:
+    properties:
+      context_type:
+        type: string
+      fromaddr:
+        type: string
+      id:
+        type: integer
+      message:
+        type: string
+      nftaddr:
+        type: string
+      sender_name:
+        type: string
+      timestamp:
+        type: string
+      timestamp_dtm:
+        type: string
+      type:
+        type: string
+    type: object
 host: restwalletchat-app-sey3k.ondigitalocean.app
 info:
   contact:
@@ -66,6 +87,31 @@ info:
   title: WalletChat API
   version: "1.0"
 paths:
+  /community:
+    post:
+      consumes:
+      - application/json
+      description: Community Chat Data
+      parameters:
+      - description: Community Message Chat Data
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Groupchatitem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Groupchatitem'
+            type: array
+      summary: CreateCommunityChatitem creates GroupChatitem just with community tag
+        (likely could be consolidated)
+      tags:
+      - GroupChat
   /create_chatitem:
     post:
       consumes:
@@ -90,7 +136,55 @@ paths:
             type: array
       summary: Create/Insert DM chat message (1-to-1 messaging)
       tags:
-      - DM
+      - DMs
+  /create_groupchatitem:
+    post:
+      consumes:
+      - application/json
+      description: Currently used for all messages outside of DMs
+      parameters:
+      - description: Group Message Chat Data
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Groupchatitem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Groupchatitem'
+            type: array
+      summary: Create/Insert chat message for Community/NFT/Group Messaging
+      tags:
+      - GroupChat
+  /get_groupchatitems/{address}:
+    get:
+      consumes:
+      - application/json
+      description: Community Chat Data
+      parameters:
+      - description: Get Group Chat Data Data By Address
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Groupchatitem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Groupchatitem'
+            type: array
+      summary: GetGroupChatItems gets group chat data for a given address
+      tags:
+      - GroupChat
   /get_inbox/{address}:
     get:
       consumes:
@@ -114,7 +208,7 @@ paths:
             type: array
       summary: Get Inbox Summary With Last Message
       tags:
-      - inbox
+      - Inbox
   /get_unread_cnt/{address}:
     get:
       consumes:
@@ -137,7 +231,7 @@ paths:
       summary: Get all unread messages TO a specific user, used for total count notification
         at top notification bar
       tags:
-      - inbox
+      - Inbox
   /get_unread_cnt/{address}/{nftaddr}/{nftid}:
     get:
       consumes:
@@ -169,12 +263,12 @@ paths:
             type: integer
       summary: Get all unread messages for a specific NFT context
       tags:
-      - inbox
+      - NFT
   /get_unread_cnt/{fromaddr}/{toaddr}:
     get:
       consumes:
       - application/json
-      description: Get Unread count for DMs (>_<)
+      description: Get Unread count for DMs
       parameters:
       - description: 'TO: Wallet Address'
         in: path
@@ -195,13 +289,13 @@ paths:
             type: integer
       summary: Get all unread messages between two addresses
       tags:
-      - inbox
+      - Unused/Legacy
   /get_unread_cnt_by_type/{address}/{type}:
     get:
       consumes:
       - application/json
       description: Get Each 1-on-1 Conversation, NFT and Community Chat For Display
-        in Inbox (>_<)
+        in Inbox
       parameters:
       - description: Wallet Address
         in: path
@@ -223,12 +317,12 @@ paths:
       summary: Get all unread messages TO a specific user, used for total count notification
         at top notification bar
       tags:
-      - inbox
+      - Unused/Legacy
   /get_unread_cnt_nft/{address}:
     get:
       consumes:
       - application/json
-      description: Get Unread count for all NFT contexts given a wallet address (>_<)
+      description: Get Unread count for all NFT contexts given a wallet address
       parameters:
       - description: Wallet Address
         in: path
@@ -244,29 +338,12 @@ paths:
             type: integer
       summary: Get all unread messages for all NFT related chats for given user
       tags:
-      - inbox
-  /getall_chatitems:
-    get:
-      consumes:
-      - application/json
-      description: Get Entire Chatitems table
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/entity.Chatitem'
-            type: array
-      summary: Get All Chat Items (legacy - not used currently)
-      tags:
-      - inbox
+      - Unused/Legacy
   /getall_chatitems/{address}:
     get:
       consumes:
       - application/json
-      description: Get all Chat Items for DMs for a given wallet address (>_<)
+      description: Get all Chat Items for DMs for a given wallet address
       parameters:
       - description: Wallet Address
         in: path
@@ -284,7 +361,7 @@ paths:
             type: array
       summary: Get Chat Item For Given Wallet Address
       tags:
-      - inbox
+      - Unused/Legacy
   /getall_chatitems/{fromaddr}/{toaddr}:
     get:
       consumes:
@@ -313,12 +390,12 @@ paths:
             type: array
       summary: Get Chat Data Between Two Addresses
       tags:
-      - inbox
+      - DMs
   /getnft_chatitems/{address}:
     get:
       consumes:
       - application/json
-      description: Get ALL NFT context items for a given wallet address (>_<)
+      description: Get ALL NFT context items for a given wallet address
       parameters:
       - description: Wallet Address
         in: path
@@ -336,13 +413,13 @@ paths:
             type: array
       summary: Get NFT Related Chat Items For Given Wallet Address
       tags:
-      - inbox
+      - Unused/Legacy
   /getnft_chatitems/{address}/{nftaddr}/{nftid}:
     get:
       consumes:
       - application/json
       description: Get all specified NFT contract and ID items for a given wallet
-        address (>_<)
+        address
       parameters:
       - description: Wallet Address
         in: path
@@ -371,7 +448,7 @@ paths:
       summary: Get NFT Related Chat Items For Given NFT Contract and ID, relating
         to one wallet
       tags:
-      - inbox
+      - Unused/Legacy
   /getnft_chatitems/{fromaddr}/{toaddr}/{nftaddr}/{nftid}:
     get:
       consumes:
@@ -411,12 +488,12 @@ paths:
       summary: Get NFT Related Chat Items For Given NFT Contract and ID, between two
         wallet addresses (TO and FROM are interchangable)
       tags:
-      - inbox
+      - NFT
   /getnft_chatitems/{nftaddr}/{nftid}:
     get:
       consumes:
       - application/json
-      description: Get ALL NFT context items for a given wallet address (>_<)
+      description: Get ALL NFT context items for a given wallet address
       parameters:
       - description: NFT Contract Address
         in: path
@@ -439,7 +516,7 @@ paths:
             type: array
       summary: Get NFT Related Chat Items For Given NFT Contract and ID
       tags:
-      - inbox
+      - Unused/Legacy
   /unreadcount/{address}:
     get:
       consumes:
@@ -461,5 +538,5 @@ paths:
       summary: Get all unread messages TO a specific user, used for total count notification
         at top notification bar
       tags:
-      - inbox
+      - Inbox
 swagger: "2.0"
