# main.go
@@ -55,7 +55,7 @@ func initaliseHandlers(router *mux.Router) {
 	router.HandleFunc("/get_inbox/{address}", controllers.GetInboxByOwner).Methods("GET")
 	router.HandleFunc("/create_chatitem", controllers.CreateChatitem).Methods("POST")
 	//router.HandleFunc("/create_chatitem_tmp", controllers.CreateChatitemTmp).Methods("POST")
-	router.HandleFunc("/getall_chatitems", controllers.GetAllChatitems).Methods("GET")
+	//router.HandleFunc("/getall_chatitems", controllers.GetAllChatitems).Methods("GET")
 
 	//unreadcnt per week4 requirements
 	router.HandleFunc("/unreadcount/{address}", controllers.GetUnreadcnt).Methods("GET")
